--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head lang="en">
     <meta charset="UTF-8">
     <title>登入</title>
@@ -8,18 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
     <link rel="alternate icon" type="image/png" href="i/favicon.png">
     <link rel="stylesheet" href="css/amazeui.min.css"/>
+    <script src="js/jquery-3.4.0.min.js"></script>
+
     <style>
         .header {
             text-align: center;
         }
+
         .header h1 {
             font-size: 200%;
             color: #333;
             margin-top: 30px;
         }
+
         .header p {
             font-size: 14px;
         }
@@ -31,7 +34,7 @@
         <h1>Dou Bi</h1>
         <p>my friend test</p>
     </div>
-    <hr />
+    <hr/>
 </div>
 <div class="am-g">
     <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
@@ -39,27 +42,29 @@
         <hr>
         <div class="am-btn-group">
             <a href="#" class="am-btn am-btn-secondary am-btn-sm"><i class="am-icon-github am-icon-sm"></i> Github</a>
-            <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i> Google+</a>
-            <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i> stackOverflow</a>
+            <a href="#" class="am-btn am-btn-success am-btn-sm"><i class="am-icon-google-plus-square am-icon-sm"></i>
+                Google+</a>
+            <a href="#" class="am-btn am-btn-primary am-btn-sm"><i class="am-icon-stack-overflow am-icon-sm"></i>
+                stackOverflow</a>
         </div>
         <br>
         <br>
 
-        <form method="post" class="am-form">
-            <label for="email">账号:</label>
-            <input type="email" name="" id="email" value="">
+        <form method="post" class="am-form" id="theform">
+            <label for="account">账号:</label>
+            <input type="text" name="account" id="account" value="">
             <br>
             <label for="password">密码:</label>
-            <input type="password" name="" id="password" value="">
+            <input type="password" name="password" id="password" value="">
             <br>
             <label for="remember-me">
                 <input id="remember-me" type="checkbox">
                 记住密码
             </label>
-            <br />
+            <br/>
             <div class="am-cf">
-                <input type="submit" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl">
-                <input type="submit" name="" value="忘记密码 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr">
+                <input type="button" name="" value="登 录" class="am-btn am-btn-primary am-btn-sm am-fl">
+                <input type="button" name="" value="忘记密码 ^_^? " class="am-btn am-btn-default am-btn-sm am-fr">
             </div>
         </form>
         <hr>
@@ -67,3 +72,20 @@
 </div>
 </body>
 </html>
+<script>
+    $('.am-fl').click(function (event) {
+        var theForm = new FormData(document.getElementById("theform"));
+        $.ajax({
+            url: '/home/login.json',
+            type: 'post',
+            data: theForm,
+            cache: false,
+            processData: false,
+            contentType: false,
+            success: function (result) {
+
+            }
+
+        });
+    })
+</script>
